--- a/HTML ASSIGNMENT/pages/about.html
+++ b/HTML ASSIGNMENT/pages/about.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT THE RAVEN RESTURANT</title>
+    <link rel="stylesheet" href="../styles.css/about.css">
 </head>
 <body>
     <h1>ABOUT THE RAVEN RESTURANT</h1>
-    <p>Where every flavor tells a story with delicious tasty food.</p>
-    <p>We have the best tastier and delicious food in town(not bragging but the facts)</p>
-    <img src="../images/burg.jpg" alt = "burger">
-    <img src="../images/fff.jpg" alt="food">
-    <img src="../images/cc.jpg" alt="chicken">
-    <p>Enjoy the delicious meals at The Raven Resturant </p>
+    <p>A culinary journey of passion and flvor</p>
+    <p>Welcome to The Raven Resturant where every flavor tells a story with delicious tasty food</p>
+    <p>and every meal is a journey through flavors, passion,and creativity.</p>    
+    <p>We are more than just a restaurant; we are a </p>
+    <p>culmination of years of dedication to the art of cooking and a profound love for bringing </p>
+    <p>people together over exceptional food. Our story is one of culinary adventure, a story that </p>
+    <p>we're thrilled to share with you. From the moment we opened our doors, we've been </p>
+    <p>committed to crafting unforgettable dining experiences that go beyond the plate, embracing</p>
+    <p>the values of quality, community, and innovation. Join us on this gastronomic voyage, and let </p>
+    <p>us take you behind the scenes of The Raven Resturant.</p>
     
-
     <a href="../index.html">back to index</a>
 
     
