--- a/HTML ASSIGNMENT/pages/contact us.html
+++ b/HTML ASSIGNMENT/pages/contact us.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT US-THE RAVEN RESTURANT</title>
+    <link rel="stylesheet" href="../styles.css/contact.css">
 
 </head>
 <body>
@@ -11,6 +12,8 @@
         <h2>contact information</h2>
         <p><strong>Adress:</strong>100 Main Street, Kampala, Uganda</p>
         <p><strong>phone:</strong> +256 770942876</p>
+        <p><strong>reservations and online ordering:</strong>call 0389453621</p>
+        <p><strong>socialmedia platforms:</strong>whatsapp(+256 770942876),instagram,tiktok@ The Ravens Resturant</p>
         <p><strong>Email:</strong>info@theravenresturant.com</p>
     </section>
 
