--- a/HTML ASSIGNMENT/pages/menu.html
+++ b/HTML ASSIGNMENT/pages/menu.html
@@ -15,48 +15,111 @@
             <p>Affordable</p>
             <p class="price">20000ugx</p>
         </div>
+
         <div class = "menu-item">
-            <img src="../images/fish.jpg" alt="food item 2">
-            <h2>fish</h2>
-            <p>Very delicious</p>
-            <p classs="price">30000ugx</p>
-        </div>
-        <div class = "menu-item">
-            <img src="../images/local.jpg" alt="food item 3">
+            <img src="../images/local.jpg" alt="food item 2">
              <h2>local food</h2>
              <p>cheap</p>
              <p class="price">10000ugx</p>
         </div>
+
         <div class= "menu-item">
-            <img src="../images/cc.jpg" alt="food item 4">
+            <img src="../images/cc.jpg" alt="food item 3">
             <h2>chicken</h2>
             <p>spicy and affordable</p>
             <p class="price">25000ugx</p>
         </div>
+
         <div class="menu-item">
-            <img src="../images/drinks.jpg" alt="food item 5">
+            <img src="../images/drinks.jpg" alt="food item 4">
             <h2>soft drinks</h2>
             <p>cold and fresh</p>
             <p class="price">5000ugx</p>   
         </div>
+
         <div class="menu-item">
             <img src="../images/cofee.jpeg" alt="food item 5">
             <h2>coffee</h2>
             <p>sweet aroma</p>
             <p class="price">8000ugx</p>   
         </div>
+
         <div class="menu-item">
-            <img src="../images/pizza.jpeg" alt="food item 5">
+            <img src="../images/pizza.jpeg" alt="food item 6">
             <h2>pizza</h2>
-            <p>tasty</p>
+            <p>large</p>
             <p class="price">30000ugx</p>   
         </div>
+
         <div class="menu-item">
-            <img src="../images/drinks.jpg" alt="food item 5">
-            <h2>soft drinks</h2>
+            <img src="../images/sodas.jpeg" alt="food item 7">
+            <h2>sodas</h2>
             <p>cold and fresh</p>
             <p class="price">5000ugx</p>   
         </div>
+
+        <div class="menu-item">
+            <img src="../images/burg.jpg" alt="food item 8">
+            <h2>burger</h2>
+            <p>cheesey</p>
+            <p class="price">10000ugx</p>  
+        </div>
+
+         <div class="menu-item">
+                <img src="../images/lusani.jpeg" alt="food item 9">
+                <h2>lusaniya</h2>
+                <p>tasty and delicious</p>
+                <p class="price">25000ugx</p>  
+        </div> 
+
+         <div class="menu-item">
+                    <img src="../images/roleax.jpeg" alt="food item 10">
+                    <h2>rolex</h2>
+                    <p>yummy</p>
+                    <p class="price">10000ugx</p>   
+         </div> 
+ 
+         <div class="menu-item">
+            <img src="../images/salads.jpg" alt="food item 11">
+            <h2>salads</h2>
+            <p>creamy</p>
+            <p class="price">5000ugx</p>   
+        </div>  
+
+         <div class="menu-item">
+            <img src="../images/icecream.jpeg" alt="food item 12">
+            <h2>icecream</h2>
+            <p>yummy</p>
+            <p class="price">5000ugx</p>   
+        </div>  
+
+        <div class="menu-item">
+            <img src="../images/fries1.jpeg" alt="food item 13">
+            <h2>fries</h2>
+            <p>cripsy</p>
+            <p class="price">15000ugx</p>   
+        </div>  
+
+        <div class="menu-item">
+            <img src="../images/fish.jpg" alt="food item 14">
+            <h2>fish</h2>
+            <p>yummy</p>
+            <p class="price">35000ugx</p>   
+        </div> 
+        
+        <div class="menu-item">
+            <img src="../images/fruit salad" alt="food item 15">
+            <h2>fruit salads</h2>
+            <p>yummy</p>
+            <p class="price">5000ugx</p>   
+        </div>  
+
+        <div class="menu-item">
+            <img src="../images/noodles.jpeg" alt="food item 16">
+            <h2>noodles</h2>
+            <p>spicy</p>
+            <p class="price">10000ugx</p>   
+        </div>  
     </section>
     
     <a href="../index.html">back to index</a>
